WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
255648
AX: aria-activedescendant doesn't work for display:contents elements
https://bugs.webkit.org/show_bug.cgi?id=255648
Summary
AX: aria-activedescendant doesn't work for display:contents elements
Tyler Wilcock
Reported
2023-04-19 01:08:39 PDT
...
Attachments
Patch
(17.66 KB, patch)
2023-04-19 01:13 PDT
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Patch
(18.52 KB, patch)
2023-04-19 10:47 PDT
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Patch
(18.53 KB, patch)
2023-04-19 15:19 PDT
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-04-19 01:08:56 PDT
<
rdar://problem/108248056
>
Tyler Wilcock
Comment 2
2023-04-19 01:13:23 PDT
Created
attachment 465979
[details]
Patch
Tyler Wilcock
Comment 3
2023-04-19 10:47:36 PDT
Created
attachment 465982
[details]
Patch
Tyler Wilcock
Comment 4
2023-04-19 15:19:48 PDT
Created
attachment 465992
[details]
Patch
EWS
Comment 5
2023-04-19 23:20:28 PDT
Committed
263163@main
(d488f398f95d): <
https://commits.webkit.org/263163@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 465992
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug