AX: aria-activedescendant doesn't work for display:contents elements https://bugs.webkit.org/show_bug.cgi?id=255648 rdar://problem/108248056

Reviewed by Chris Fleizach.

Move `shouldFocusActiveDescendant` and `activeDescendant` from
AccessibilityRenderObject to AccessibilityObject since they don't
require a renderer. Tested by new test: display-contents-descendant-menu-item.html

Also removes two unused functions:
  - isLinked
  - hasControlsAttributeSet

And rewrites accessibility/mac/aria-tree-activedescendant.html to be a
more modern style layout test.

* LayoutTests/accessibility/display-contents-descendant-menu-item-expected.txt: Added.
* LayoutTests/accessibility/display-contents-descendant-menu-item.html: Added.
* LayoutTests/platform/mac-wk1/TestExpectations: Skip new test.
* LayoutTests/accessibility/mac/aria-tree-activedescendant-expected.txt:
* LayoutTests/accessibility/mac/aria-tree-activedescendant.html:
* Source/WebCore/accessibility/AccessibilityImageMapLink.h:
* Source/WebCore/accessibility/AccessibilityMediaObject.cpp:
(WebCore::AccessibilityMediaObject::hasControlsAttributeSet const): Deleted.
* Source/WebCore/accessibility/AccessibilityMediaObject.h:
* Source/WebCore/accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::shouldFocusActiveDescendant const):
(WebCore::AccessibilityObject::activeDescendant const):
* Source/WebCore/accessibility/AccessibilityObject.h:
(WebCore::AccessibilityObject::isLinked const): Deleted.
(WebCore::AccessibilityObject::shouldFocusActiveDescendant const): Deleted.
* Source/WebCore/accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::observableObject const):
(WebCore::AccessibilityRenderObject::expandedTextValue const):
(WebCore::AccessibilityRenderObject::shouldFocusActiveDescendant const): Deleted.
(WebCore::AccessibilityRenderObject::activeDescendant const): Deleted.
(WebCore::AccessibilityRenderObject::isLinked const): Deleted.
* Source/WebCore/accessibility/AccessibilityRenderObject.h:

Canonical link: https://commits.webkit.org/263163@main