Source/WebCore/accessibility/AccessibilityImageMapLink.h
@@ -54,7 +54,6 @@ public:
     Element* actionElement() const override;
     URL url() const override;
     bool isLink() const override { return true; }
-    bool isLinked() const override { return true; }
     String title() const override;
     String description() const override;
     AccessibilityObject* parentObject() const override;
